generate new client, upload packages
